# That-one-movie-where

./: .gitignore  Cargo.toml  README.md  dev.bat  index.html  start_frontend.bat  start_server.bat
frontend/: .gitignore  Cargo.toml  design.css  index.html
frontend/src/: api.rs  main.rs
frontend/src/components/: main_view.rs  mod.rs  movie_view.rs
movie_types/: Cargo.toml
movie_types/src/: lib.rs  movie.rs  movie_error.rs
server/: Cargo.toml
server/src/: api.rs  main.rs
src/: api.rs  main.rs  movie.rs  movie_error.rs
src/ui/: app.rs  mod.rs  movie_display.rs  movie_view.rs
