[package]
name = "that_one_movie_where"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
json = "0.12.4"
yew = "0.19"
gloo = "0.6.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew-hooks = "0.1.56"
regex = "1.6.0"