[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
movie_types = { path = "../movie_types" }
gloo = "0.8.0"
reqwest = "0.11.12"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
yew = "0.19.3"
yew-router = "0.16.0"
console_error_panic_hook = "0.1.7"
regex = "1.6.0"
serde_json = "1.0.87"
yew-hooks = "0.1.56"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
log = "0.4.17"
