[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
axum-extra = { version = "0.3.7", features = ["spa"] }
clap = { version = "4.0.18", features = ["derive"] }
http-body = "0.4.5"
json = "0.12.4"
log = "0.4.17"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
movie_types = { path = "../movie_types" }
